fixed navigation header on mobile

--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -255,6 +255,34 @@ img.services-info-img {
 		border-bottom: 2px solid black;
 		margin-bottom: 20px;
 	}
+
+	header nav {
+		display: flex;
+		flex-direction: column;
+		justify-content: space-between;
+		margin: 20px;
+		margin-top: 100px;
+		width: 95%;
+	}
+
+	header nav a {
+		color: grey;
+		text-decoration: none;
+		border: 1px solid black;
+		height: 40px;
+		font-size: 20px;
+		text-align: center;
+		margin: 10px;
+		padding: 7px;
+	}
+
+	img.logo {
+		display: inline-block;
+		position: absolute;
+	  top: -40px;
+		left: 55%;
+	  transform: translateX(-50%);
+	}
 }
 
 .service a {
